# Summer-HackaDOT-2023

./: README.md
teams/topic1-polsto/refs/substrate-node-template/pallets/publish-platform/: Cargo.toml
teams/topic1-polsto/refs/substrate-node-template/pallets/publish-platform/src/: lib.rs  weights.rs
teams/topic1-polsto/src/cumulus/parachains/pallets/bwg-multisig/: Cargo.toml
teams/topic1-polsto/src/cumulus/parachains/pallets/bwg-multisig/src/: lib.rs  weights.rs
teams/topic1-polsto/src/security_token/: Cargo.toml  build.sh  lib.rs
teams/topic1-polsto/src/security_token/backup/income_token/: Cargo.toml  lib.rs
teams/topic1-polsto/src/security_token/release/: metadata.json  security_token.contract  security_token.wasm
teams/topic1-polsto/src/security_token/release/trait_erc20/: metadata.json  trait_erc20.contract  trait_erc20.wasm
teams/topic1-polsto/src/security_token/trait_erc20/: Cargo.toml  lib.rs
teams/topic1-zk-dotsquad/src/: Cargo.toml
teams/topic1-zk-dotsquad/src/src/: main.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/: Cargo.toml  README.md
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/community_protocol/contracts/community_list_manager/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/community_protocol/contracts/community_protocol/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/community_protocol/contracts/update_member_manager/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/contracts/dao_oriented_flipper/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/contracts/test/: package.json  test.ts
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/contracts/test/contract_json/: applicationCoreConatract.json  defaultElectionContract.json  defaultProposalContract.json  (+1 more)
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/api/: accountInfoUtils.ts  apiUtils.ts  election.ts  getFlip.ts  member.ts  proposal.ts  software.ts
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/components/: FlipState.tsx  ProposalDetails.tsx  ProposalList.tsx  ProposalParts.tsx  SelectAccount.tsx  SubmitProposal.tsx
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/contract_abi/: application_core.json  dao_oriented_flipper.json
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/pages/: _app.tsx  index.tsx
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/example/flipper_oriented_dao/frontend/types/: ElectionTypes.ts  MemberTypes.ts  ProposalTypes.ts  SoftwareTypes.ts
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/: all_build.bash
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/application_core/: Cargo.toml
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/application_core/src/: lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/common/: common_logics.rs  mod.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/traits/: mod.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/traits/contract_base/: contract_base.rs  mod.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/traits/errors/: contract_error.rs  mod.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/logics/traits/types/: types.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_contract/: Cargo.toml  lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_election/: Cargo.toml
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_election/src/: lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_member/: Cargo.toml
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_member/src/: lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_proposal/: Cargo.toml
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/pre_install/default_proposal/src/: lib.rs
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/test/: package.json  protocol_test.ts  tsconfig.json
teams/topic2-DAO_Oriented_Protocol/src/dao_oriented_protocol/protocol/test/contract_json/: defaultMemberContract.json
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/contracts/paras_refundable/: Cargo.toml  lib.rs
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/logics/: Cargo.toml
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/logics/impls/: mod.rs
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/logics/impls/launchpad/: launchpad.rs  mod.rs  types.rs
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/logics/impls/psp34_traits/: psp34_traits.rs
teams/topic2-Paras-NFT-Launchpad-Marketplace/src/paras-ink-nft-refundable-contract/logics/traits/: launchpad.rs  psp34_traits.rs
teams/topic4-BringYourOwnFace/src/zk-face-circuit/bridge/: Cargo.toml  README.md  pyproject.toml
teams/topic4-BringYourOwnFace/src/zk-face-circuit/bridge/.env/: pyvenv.cfg
teams/topic4-BringYourOwnFace/src/zk-face-circuit/bridge/src/: lib.rs
(+420 files in other folders)
