[package]
name = "default_election"
version = "0.1.0"
authors = ["shin.takahashi"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }

# ink_primitives = { version = "3.4.0", default-features = false }
# ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
# ink_env = { version = "3.4.0", default-features = false }
# ink_storage = { version = "3.4.0", default-features = false }
# ink_lang = { version = "3.4.0", default-features = false }
# ink_prelude = { version = "3.4.0", default-features = false }
# ink_engine = { version = "3.4.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# add own
# openbrush = {tag = "v2.3.0",  git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable"] }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable"] }
contract_helper = { path = "../../logics", default-features = false }

# communication_base = { version = "0.1.0", path = "../communication_base", default-features = false, features = ["ink-as-dependency"] }
default_contract = { version = "0.1.0", path = "../default_contract", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "default_election"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    # "ink_metadata/std",
    # "ink_env/std",
    # "ink_storage/std",
    # "ink_primitives/std",
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "contract_helper/std",
    # "communication_base/std",
    "default_contract/std",
]
ink-as-dependency = []
