[package]
name = "dao_oriented_flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# ethabi = { git = "https://github.com/akru/ethabi", default-features = false }
# hex-literal = { version = "^0.4.1", default-features = false }
# hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# xvm-environment = { git = "https://github.com/AstarNetwork/ink-xvm-sdk", default-features = false }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable"] }
contract_helper = { path = "../../../../protocol/logics", default-features = false }
# communication_base = { version = "0.1.0", path = "../../../../backend/contracts/communication_base", default-features = false, features = ["ink-as-dependency"] }
default_contract = { version = "0.1.0", path = "../../../../protocol/pre_install/default_contract", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # "ethabi/std",
    # "hex-literal/std",
    # "xvm-environment/std",
    "openbrush/std",
    "contract_helper/std",
    # "communication_base/std",
]
ink-as-dependency = []
